--- a/META.yml
+++ b/META.yml
@@ -22,13 +22,13 @@ no_index:
     - t
     - xt
 requires:
+  Carp: 0
+  Hash::FieldHash: 0
   Scalar::Util: 0
-  autodie: 0
-  boolean: 0
-  common::sense: 0
+  Sub::Name: 0
   perl: 5.10.0
 resources:
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash
   homepage: https://metacpan.org/release/Object-Stash
   license: http://dev.perl.org/licenses/
-version: 0.002
+version: 0.003
