--- a/META.yml
+++ b/META.yml
@@ -1,34 +1,37 @@
 ---
-abstract: "provides a Catalyst-like \"stash\" method for your class"
+abstract: 'provides a Catalyst-like "stash" method for your class'
 author:
   - 'Toby Inkster <tobyink@cpan.org>'
-build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::More: 0.61
+  - 'TOBYINK <tobyink@cpan.org>'
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.02'
+  ExtUtils::MakeMaker: '6.17'
+dynamic_config: 0
+generated_by: 'Moose::Meta::Class::__ANON__::SERIAL::9 version , CPAN::Meta::Converter version 2.140640'
 keywords: []
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-module_name: Object::Stash
+  version: '1.4'
 name: Object-Stash
 no_index:
   directory:
+    - eg
+    - examples
     - inc
     - t
     - xt
-requires:
-  Carp: 0
-  Hash::FieldHash: 0
-  Scalar::Util: 0
-  Sub::Name: 0
-  perl: 5.10.0
+optional_features: {}
+provides:
+  Object::Stash:
+    file: lib/Object/Stash.pm
+    version: '0.006'
+  Object::Stash::Util:
+    file: lib/Object/Stash/Util.pm
 resources:
+  X_identifier: http://purl.org/NET/cpan-uri/dist/Object-Stash/project
   bugtracker: http://rt.cpan.org/Dist/Display.html?Queue=Object-Stash
   homepage: https://metacpan.org/release/Object-Stash
   license: http://dev.perl.org/licenses/
-version: 0.005
+  repository: git://github.com/tobyink/p5-object-stash.git
+version: '0.006'
